tests/sksl/errors/SamplerExternalOES.glsl
### Compilation failed:

error: 3: external texture support is not enabled
samplerExternalOES e;
^^^^^^^^^^^^^^^^^^^^
1 error
